--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <script src="api.js"></script>
  
 </head>
+  <head>R&B Medical Laboratory</head>
 <body>
 <style>
 
@@ -43,6 +44,7 @@
         font-size: 6rem;
     }
 </style>
+
 <div class="container col-xxl-8 px-4 py-5">
     <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
       <div class="col-10 col-sm-8 col-lg-6">
