--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <script src="api.js"></script>
  
 </head>
-  <head>R&B Medical Laboratory</head>
+  <title>R&B Medical Laboratory</title>
 <body>
 <style>
 
