--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 
             </ul>
         </header>
-<div class="container col-xxl-8 px-4 py-5">
+<div class="container px-4 py-5">
     <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
       <div class="col-10 col-sm-8 col-lg-6">
         <img src="https://img2.pic.in.th/pic/-282f2dab186d5afab.png" alt="" width="700" height="500" loading="lazy">
