--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
             </a>
 
             <ul class="nav nav-pills">
-                <li class="nav-item"><a href="#" class="nav-link active fw-bold" aria-current="page">หน้าแรก</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">หน้าแรก</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">อัตราค่าบริการ</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">ผลตรวจสุขภาพประจำปี</a></li>
+                <li class="nav-item"><a href="#" class="nav-link  active fw-bold"  aria-current="page">ผลตรวจสุขภาพประจำปี</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">ติดต่อเรา</a></li>
                 
             </ul>
