--- a/home.html
+++ b/home.html
@@ -153,7 +153,7 @@
                 <li class="nav-item"><a href="index.html" class="nav-link">หน้าแรก</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">อัตราค่าบริการ</a></li>
                 <li class="nav-item"><a href="#" class="nav-link  active fw-bold"  aria-current="page">ผลตรวจสุขภาพประจำปี</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">ติดต่อเรา</a></li>
+                <li class="nav-item"><a href="contact.html" class="nav-link">ติดต่อเรา</a></li>
                 
             </ul>
         </header>
