--- a/index.html
+++ b/index.html
@@ -126,7 +126,9 @@
     .bd-mode-toggle {
         z-index: 1500;
     }
-
+  .container-md{
+    margin-top: 10px;;
+  }
     .bd-mode-toggle .dropdown-menu .active .bi {
         display: block !important;
     }
@@ -197,23 +199,25 @@
         padding: 5px;
     }
     .bg-body-tertiary{
-        min-width: 400px;
-        max-width: 400px;
+        min-width: 450px;
+        max-width: 450px;
     }
     .d-grid {
         grid-template-columns: auto;
     }
-   
+   p{
+    font-size: 1rem
+   }
     .container-fluid{
-        max-width: 400px;
-        min-width: 400px;
+        max-width: 550px;
+        min-width: 550px;
             }
             p{
                 font-size: 1rem;
             }
             .container{
-                max-width: 500px;
-                min-width: 500px;
+                max-width: 650px;
+                min-width: 650px;
             }
 }
 
@@ -246,11 +250,11 @@
                     <img class="img-thumbnail" src="https://img5.pic.in.th/file/secure-sv1/-135e1cf1cc667f011.png">
                 </div>
                 <div class="bg-body-tertiary border rounded-3 mt-3 mb-3">
-                    <div class="container-md mt-5">
+                    <div class="container-md">
                         <h class="fw-bold" style="font-family: sarabun; color:darkgreen;">
                             บริการตรวจวิเคราะห์และรายงานผลทางการแพทย์</h>
 
-                        <div class="container-md mt-5">
+                        <div class="container-md">
                             <w class="ms-5" style="font-family: sarabun;">
                                 ให้บริการตรวจสุขภาพและการวิเคราะห์ทางการแพทย์โดยนักเทคนิคการแพทย์
                                 ผู้เชี่ยวชาญด้านการตรวจวิเคราะห์รวมทั้งเทคโนโลยีที่ทันสมัยตามมาตรฐานสากล
@@ -267,10 +271,10 @@
         <div class="container-fluid pb-3 mt-5">
             <div class ="row">
                 <div class="col-7 bg-body-tertiary border rounded-3 mt-3 ms-3 me-3">
-                    <div class="container-md mt-5">
+                    <div class="container-md">
                         <h class="fw-bold" style="font-family: sarabun; color:darkgreen;">
                             บริการออกหน่วยตรวจสุขภาพเคลื่อนที่</h>
-                        <div class="container-md mt-5">
+                        <div class="container-md">
                             <w class="ms-5" style="font-family: sarabun;">ให้บริการตรวจสุขภาพนอกสถานที่ สำหรับ บริษัท
                                 หน่วยงาน องค์กร และสถานศึกษา ในการจัดการตรวจสุขภาพประจำปีเพื่อเป็นสวัสดิการแด่พนักงาน
                                 หรือ ตามที่กฎหมายคุ้มครองแรงงานกำหนด มีความพร้อมด้วยทีมเจ้าหน้าที่ผู้เชี่ยวชาญ
