--- a/index.html
+++ b/index.html
@@ -173,18 +173,18 @@
         line-height: 2;
     }
 
-    @media (max-width: 920px) {
+    @media (max-width: 950px) {
     .container-fluid {
         background-color: lightblue;
         padding: 10px;
     }
 
     h {
-        font-size: 1.5rem;
+        font-size: 2rem;
     }
 
     w {
-        font-size: 1rem;
+        font-size: 1.5rem;
         line-height: 1;
     }
 
@@ -199,8 +199,8 @@
         padding: 5px;
     }
     .bg-body-tertiary{
-        min-width: 850px;
-        max-width: 850px;
+        min-width: 890px;
+        max-width: 890px;
     }
     .d-grid {
         grid-template-columns: auto;
@@ -209,16 +209,19 @@
     font-size: 1rem
    }
     .container-fluid{
-        max-width: 890px;
-        min-width: 890px;
+        max-width: 920px;
+        min-width: 920px;
             }
             p{
                 font-size: 1rem;
             }
             .container{
-                max-width: 920px;
-                min-width: 920px;
+                max-width: 950px;
+                min-width: 950px;
             }
+        .d-flex{
+             max-width: 950px;
+             min-width: 950px;
 }
 
 </style>
