--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
     <div class="container">
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
             <a href="/"
-                class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+                class="d-flex align-items-center link-body-emphasis text-decoration-none">
                 <img class="nav-logo" src="https://img5.pic.in.th/file/secure-sv1/8c27b7b1c06a8f089.png">
                 <span class="fs-4" style="color:rgb(13, 48, 3)">R&B Medical Laboratory</span>
             </a>
