--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
 <body>
     <div class="container">
-        <header class="d-flex flex-wrap justify-content-space-between py-3 mb-4 border-bottom">
+        <header class="d-flex flex-wrap justify-content-end py-3 mb-4 border-bottom">
             <a href="/"
                 class="d-flex align-items-center link-body-emphasis text-decoration-none">
                 <img class="nav-logo" src="https://img5.pic.in.th/file/secure-sv1/8c27b7b1c06a8f089.png">
