--- a/index.html
+++ b/index.html
@@ -249,11 +249,11 @@
         <img fetchpriority="high" src="https://img5.pic.in.th/file/secure-sv1/Screenshot-2025-03-19-160408.png" alt=""
             style="object-fit: cover; object-position: 66% 15%; width: 100%;" data-ssr-src-done="true">
         <div class="container-fluid  mt-5">
-            <div class="d-grid gap-3">
-                <div class="bg-body-tertiary border rounded-3 mt-3 mb-3">
+            <div class="row">
+                <div class="col-4 bg-body-tertiary border rounded-3 mt-3 mb-3">
                     <img class="img-thumbnail" src="https://img5.pic.in.th/file/secure-sv1/-135e1cf1cc667f011.png">
                 </div>
-                <div class="bg-body-tertiary border rounded-3 mt-3 mb-3">
+                <div class="col-7 bg-body-tertiary border rounded-3 mt-3 mb-3">
                     <div class="container-md">
                         <h class="fw-bold" style="font-family: sarabun; color:darkgreen;">
                             บริการตรวจวิเคราะห์และรายงานผลทางการแพทย์</h>
