--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
         </div>
         <div class="container-fluid pb-3 mt-5">
             <div class ="row">
-                <div class="col-7 bg-body-tertiary border rounded-3 mt-3 ms-3 me-3">
+                <div class="col-7 bg-body-tertiary border rounded-3 mt-3 ms-3 me-3 ms-3">
                     <div class="container-md">
                         <h class="fw-bold" style="font-family: sarabun; color:darkgreen;">
                             บริการออกหน่วยตรวจสุขภาพเคลื่อนที่</h>
@@ -289,7 +289,7 @@
                     </div>
 
                 </div>
-                <div class="col-4 bg-body-tertiary border rounded-3 ms-3 mt-3">
+                <div class="col-4 bg-body-tertiary border rounded-3 ms-3 mt-3 ms-3">
                     <img class="img-thumbnail" src="https://img5.pic.in.th/file/secure-sv1/-222abbac6064ef21f.png">
 
                 </div>
