--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         </div>
         <div class="container-fluid pb-3 mt-5">
             <div class ="row">
-                <div class="col-7 bg-body-tertiary border rounded-3 mt-3 ms-3 me-3 ms-3 mb-3">
+                <div class="col-7 bg-body-tertiary border rounded-3 mt-3 ms-3 me-3 mb-3">
                     <div class="container-md">
                         <h class="fw-bold" style="font-family: sarabun; color:darkgreen;">
                             บริการออกหน่วยตรวจสุขภาพเคลื่อนที่</h>
