--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
                                 รายงานผลได้อย่างแม่นยำและน่าเชื่อถือ สำหรับผู้ที่ต้องการ ตรวจสุขภาพทั่วไป ตรวจเลือด
                                 ตรวจปัสสาวะทั่วไป ตรวจหาสารเสพติดในปัสสาวะ ตรวจการตั้งครรภ์
                                 ตรวจสุขภาพเพื่อการออกใบรับรองแพทย์ หรือ เพื่อสมัครงาน ทราบผลไว ภายใน 60 นาที </w>
-                            <p class="fs-3 fw-bold" style="font-family: sarabun; color:dodgerblue;">
-                                ยินดีให้คำปรึกษาด้วยแพทย์ผู้เชียวชาญโดยไม่เสียค่าใช้จ่าย</p><br>
+                            <h class="fs-3 fw-bold" style="font-family: sarabun; color:dodgerblue;">
+                                ยินดีให้คำปรึกษาด้วยแพทย์ผู้เชียวชาญโดยไม่เสียค่าใช้จ่าย</h><br>
                         </div>
                     </div>
                 </div>
