--- a/index.html
+++ b/index.html
@@ -250,11 +250,10 @@
             style="object-fit: cover; object-position: 66% 15%; width: 100%;" data-ssr-src-done="true">
         <div class="container-fluid  mt-5">
             <div class="row">
-                 <div class="col-4 bg-body-tertiary border rounded-3 ms-3 mt-3 ms-3 mb-3">
-                 
+                 <div class="col-4 bg-body-tertiary border rounded-3 mt-3 mb-3 ms-3">
                     <img class="img-thumbnail" src="https://img5.pic.in.th/file/secure-sv1/-135e1cf1cc667f011.png">
                 </div>
-               <div class="col-7 bg-body-tertiary border rounded-3 mt-3 ms-3 me-3 ms-3">
+                <div class="col-7 bg-body-tertiary border rounded-3 mt-3 mb-3 ms-3">
                     <div class="container-md">
                         <h class="fw-bold" style="font-family: sarabun; color:darkgreen;">
                             บริการตรวจวิเคราะห์และรายงานผลทางการแพทย์</h>
@@ -266,8 +265,8 @@
                                 รายงานผลได้อย่างแม่นยำและน่าเชื่อถือ สำหรับผู้ที่ต้องการ ตรวจสุขภาพทั่วไป ตรวจเลือด
                                 ตรวจปัสสาวะทั่วไป ตรวจหาสารเสพติดในปัสสาวะ ตรวจการตั้งครรภ์
                                 ตรวจสุขภาพเพื่อการออกใบรับรองแพทย์ หรือ เพื่อสมัครงาน ทราบผลไว ภายใน 60 นาที </w>
-                            <h class="fs-3 fw-bold" style="font-family: sarabun; color:dodgerblue;">
-                                ยินดีให้คำปรึกษาด้วยแพทย์ผู้เชียวชาญโดยไม่เสียค่าใช้จ่าย</h><br>
+                            <p class="fs-3 fw-bold" style="font-family: sarabun; color:dodgerblue;">
+                                ยินดีให้คำปรึกษาด้วยแพทย์ผู้เชียวชาญโดยไม่เสียค่าใช้จ่าย</p><br
                         </div>
                     </div>
                 </div>
