--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     .nav-pills .nav-link {
         font-size: 14px;
         padding: 5px;
-        font-size: 3rem;
+        font-size: 2rem;
     }
     .bg-body-tertiary{
         min-width: 890px;
@@ -216,6 +216,15 @@
             p{
                 font-size: 1rem;
             }
+        .col-4 {
+            max-width: 920px;
+            min-width: 920px;
+        }
+
+         .col-7 {
+            max-width: 920px;
+            min-width: 920px;
+        }
             .container{
                 max-width: 950px;
                 min-width: 950px;
