--- a/contact.html
+++ b/contact.html
@@ -247,7 +247,7 @@
 </style>
 
 <body>
-    <div id = "alert"> This page not support on mobile device , Please open on PC </div> 
+    <div id = "alert" class="ms-3 mt-5"> This page not support on mobile device , Please open on PC </div> 
     <div id="maindevice">
     <div class="container">
         <header class="d-flex flex-wrap justify-content-start py-3 mb-4 border-bottom">
