--- a/contact.html
+++ b/contact.html
@@ -199,6 +199,9 @@
     }
     #aleart{
         display: block;
+        margin-top: 10px;
+        margin-left: 1px;
+        
     }
     #maindevice {
         display: none;
@@ -247,7 +250,7 @@
 </style>
 
 <body>
-    <div id = "alert" class="ms-3 mt-5"> This page not support on mobile device , Please open on PC </div> 
+    <div id = "alert"> This page not support on mobile device , Please open on PC </div> 
     <div id="maindevice">
     <div class="container">
         <header class="d-flex flex-wrap justify-content-start py-3 mb-4 border-bottom">
