--- a/contact.html
+++ b/contact.html
@@ -137,6 +137,9 @@
         display: block !important;
     }
 
+    #alert{
+        display: none;
+    }
     .nav-logo {
 
         object-fit: contain;
