--- a/contact.html
+++ b/contact.html
@@ -92,21 +92,33 @@
         </header>
     </div>
 
-    <div class="container-fluid mt-5">
-        <div class="content">
-            <div class="text-center">
-                <img class="img-thumbnail" src="https://img2.pic.in.th/pic/1a15c85ee1372335150e3fd03d61cc03.png">
-            </div>
-            <div>
-                <h2 class="text-success">ช่องทางการติดต่อ</h2>
-                <p class="fs-4">อาร์แอนด์บี เมดิคอล คลินิคเทคนิคการแพทย์</p>
-                <p class="fs-5">เปิดทำการ:</p>
-                <p class="fs-5">จันทร์-ศุกร์: 08.00 - 17.00 น.</p>
-                <p class="fs-5">เสาร์-อาทิตย์: 09.00 - 19.00 น.</p>
+     <div class="b-example-divider"></div>
+        <div class="container-fluid  mt-5">
+            <div class="d-grid gap-3" style="grid-template-columns: 1fr 2fr;">
+                <div class="bg-body-tertiary border rounded-3 mt-3 mb-3">
+                    <img class="img-thumbnail" src="https://img2.pic.in.th/pic/1a15c85ee1372335150e3fd03d61cc03.png">
+                </div>
+                <div class="bg-body-tertiary border rounded-3 mt-3 mb-3">
+                    <div class="container-md mt-5">
+                        <h class="ms-2 fs-1 fw-bold" style="font-family: sarabun; color:darkgreen;">
+                           ช่องทางการติดต่อ</h>
+
+                        <div class="container-md mt-5">
+                            <p class="fs-3 fw-bold" style="font-family: sarabun;">
+                                อาร์แอนด์บี เมดิคอล ลินิคเทคนิคการแพทย์</p>
+                            <p class="fs-4" style="font-family: sarabun;">
+                                 เวลาเปิดทำการ</p>
+                                 <p class="fs-4" style="font-family: sarabun;">
+                                    วันจันทร์  ถึง  วันศุกร์      เวลา 08.00น. - 17.00 น</p>
+                                    <p class="fs-4" style="font-family: sarabun;">
+                                        วันเสาร์ ถึง วันอาทิตย์      เวลา 09.00 น. - 19.00 น.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
 
+        </div>
     <div class="container mt-5">
         <div class="row">
             <div class="col-md-6 mb-4">
