--- a/contact.html
+++ b/contact.html
@@ -75,22 +75,22 @@
 </head>
 
 <body>
-    <div class="alert-mobile">This page is optimized for PC, but it also supports mobile devices.</div>
-    
     <div class="container">
-        <header class="d-flex flex-wrap justify-content-between py-3 mb-4 border-bottom">
-            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 link-body-emphasis text-decoration-none">
+        <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+            <a href="/"
+                class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
                 <img class="nav-logo" src="https://img5.pic.in.th/file/secure-sv1/8c27b7b1c06a8f089.png">
-                <span class="fs-4 text-success">R&B Medical Laboratory</span>
+                <span class="fs-4" style="color:rgb(13, 48, 3)">R&B Medical Laboratory</span>
             </a>
+
             <ul class="nav nav-pills">
-                <li class="nav-item"><a href="index.html" class="nav-link">หน้าแรก</a></li>
+                <li class="nav-item"><a href="index.html" class="nav-link" aria-current="page">หน้าแรก</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">อัตราค่าบริการ</a></li>
-                <li class="nav-item"><a href="home.html" class="nav-link">ผลตรวจสุขภาพ</a></li>
+                <li class="nav-item"><a href="home.html" class="nav-link">ผลตรวจสุขภาพประจำปี</a></li>
                 <li class="nav-item"><a href="#" class="nav-link active fw-bold">ติดต่อเรา</a></li>
+
             </ul>
         </header>
-    </div>
 
      <div class="b-example-divider"></div>
         <div class="container-fluid  mt-5">
