--- a/contact.html
+++ b/contact.html
@@ -84,12 +84,11 @@
             </a>
 
             <ul class="nav nav-pills">
-                <li class="nav-item"><a href="index.html" class="nav-link" aria-current="page">หน้าแรก</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">อัตราค่าบริการ</a></li>
-                <li class="nav-item"><a href="home.html" class="nav-link">ผลตรวจสุขภาพประจำปี</a></li>
-                <li class="nav-item"><a href="#" class="nav-link active fw-bold">ติดต่อเรา</a></li>
-
-            </ul>
+    <li class="nav-item"><a href="index.html" class="nav-link" style="background-color: white; color: green;">หน้าแรก</a></li>
+    <li class="nav-item"><a href="#" class="nav-link" style="background-color: white; color: green;">อัตราค่าบริการ</a></li>
+    <li class="nav-item"><a href="home.html" class="nav-link" style="background-color: white; color: green;">ผลตรวจสุขภาพประจำปี</a></li>
+    <li class="nav-item"><a href="#" class="nav-link active fw-bold" style="background-color: green; color: white;">ติดต่อเรา</a></li>
+</ul>
         </header>
 
      <div class="b-example-divider"></div>
