--- a/contact.html
+++ b/contact.html
@@ -67,8 +67,12 @@
         }
 
         @media (max-width: 768px) {
-            .alert-mobile {
-                display: block;
+            .nav-container {
+                flex-direction: column;
+                align-items: center;
+            }
+            .nav-pills {
+                margin-top: 10px;
             }
         }
     </style>
@@ -76,21 +80,18 @@
 
 <body>
     <div class="container">
-        <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-            <a href="/"
-                class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-                <img class="nav-logo" src="https://img5.pic.in.th/file/secure-sv1/8c27b7b1c06a8f089.png">
-                <span class="fs-4" style="color:rgb(13, 48, 3)">R&B Medical Laboratory</span>
+        <header class="d-flex flex-wrap py-3 mb-4 border-bottom nav-container">
+            <a href="/" class="d-flex align-items-center text-decoration-none nav-logo">
+                <img src="https://img5.pic.in.th/file/secure-sv1/8c27b7b1c06a8f089.png" alt="Logo">
+                <span class="fs-4 text-dark ms-2">R&B Medical Laboratory</span>
             </a>
-
             <ul class="nav nav-pills">
-    <li class="nav-item"><a href="index.html" class="nav-link" style="background-color: white; color: green;">หน้าแรก</a></li>
-    <li class="nav-item"><a href="#" class="nav-link" style="background-color: white; color: green;">อัตราค่าบริการ</a></li>
-    <li class="nav-item"><a href="home.html" class="nav-link" style="background-color: white; color: green;">ผลตรวจสุขภาพประจำปี</a></li>
-    <li class="nav-item"><a href="#" class="nav-link active fw-bold" style="background-color: green; color: white;">ติดต่อเรา</a></li>
-</ul>
+                <li class="nav-item"><a href="#" class="nav-link active">หน้าแรก</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">อัตราค่าบริการ</a></li>
+                <li class="nav-item"><a href="home.html" class="nav-link">ผลตรวจสุขภาพประจำปี</a></li>
+                <li class="nav-item"><a href="contact.html" class="nav-link">ติดต่อเรา</a></li>
+            </ul>
         </header>
-
      <div class="b-example-divider"></div>
         <div class="container-fluid  mt-5">
             <div class="d-grid gap-3" style="grid-template-columns: 1fr 2fr;">
