--- a/contact.html
+++ b/contact.html
@@ -79,46 +79,24 @@
 </head>
 
 <body>
-    <div class="container">
-        <header class="d-flex flex-wrap py-3 mb-4 border-bottom nav-container">
-            <a href="/" class="d-flex align-items-center text-decoration-none nav-logo">
-                <img src="https://img5.pic.in.th/file/secure-sv1/8c27b7b1c06a8f089.png" alt="Logo">
-                <span class="fs-4 text-dark ms-2">R&B Medical Laboratory</span>
+    
+
+       <div class="container">
+        <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+            <a href="/"
+                class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+                <img class="nav-logo" src="https://img5.pic.in.th/file/secure-sv1/8c27b7b1c06a8f089.png">
+                <span class="fs-4" style="color:rgb(13, 48, 3)">R&B Medical Laboratory</span>
             </a>
+
             <ul class="nav nav-pills">
-                <li class="nav-item"><a href="#" class="nav-link active">หน้าแรก</a></li>
+                <li class="nav-item"><a href="index.html" class="nav-link" aria-current="page">หน้าแรก</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">อัตราค่าบริการ</a></li>
                 <li class="nav-item"><a href="home.html" class="nav-link">ผลตรวจสุขภาพประจำปี</a></li>
-                <li class="nav-item"><a href="contact.html" class="nav-link">ติดต่อเรา</a></li>
+                <li class="nav-item"><a href="#" class="nav-link active fw-bold">ติดต่อเรา</a></li>
+
             </ul>
         </header>
-     <div class="b-example-divider"></div>
-        <div class="container-fluid  mt-5">
-            <div class="d-grid gap-3" style="grid-template-columns: 1fr 2fr;">
-                <div class="bg-body-tertiary border rounded-3 mt-3 mb-3">
-                    <img class="img-thumbnail" src="https://img2.pic.in.th/pic/1a15c85ee1372335150e3fd03d61cc03.png">
-                </div>
-                <div class="bg-body-tertiary border rounded-3 mt-3 mb-3">
-                    <div class="container-md mt-5">
-                        <h class="ms-2 fs-1 fw-bold" style="font-family: sarabun; color:darkgreen;">
-                           ช่องทางการติดต่อ</h>
-
-                        <div class="container-md mt-5">
-                            <p class="fs-3 fw-bold" style="font-family: sarabun;">
-                                อาร์แอนด์บี เมดิคอล ลินิคเทคนิคการแพทย์</p>
-                            <p class="fs-4" style="font-family: sarabun;">
-                                 เวลาเปิดทำการ</p>
-                                 <p class="fs-4" style="font-family: sarabun;">
-                                    วันจันทร์  ถึง  วันศุกร์      เวลา 08.00น. - 17.00 น</p>
-                                    <p class="fs-4" style="font-family: sarabun;">
-                                        วันเสาร์ ถึง วันอาทิตย์      เวลา 09.00 น. - 19.00 น.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        </div>
     <div class="container mt-5">
         <div class="row">
             <div class="col-md-6 mb-4">
