--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 
         .nav-pills .nav-link {
             color: white;
-            background-color: #2E7D32; /* สีเขียวเข้ม */
+            background-color: #FFFFFF; /* สีเขียวเข้ม */
         }
 
         .nav-pills .nav-link.active, .nav-pills .nav-link:hover {
