--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
         }
 
         .nav-pills .nav-link {
-            color: white;
+            color: #1B5E20;
             background-color: #FFFFFF; /* สีเขียวเข้ม */
         }
 
