--- a/contact.html
+++ b/contact.html
@@ -110,7 +110,7 @@
 
                         <div class="container-md mt-5">
                             <p class="fs-3 fw-bold" style="font-family: sarabun;">
-                                อาร์แอนด์บี เมดิคอล ลินิคเทคนิคการแพทย์</p>
+                                อาร์แอนด์บี เมดิคอล คลินิคเทคนิคการแพทย์</p>
                             <p class="fs-4" style="font-family: sarabun;">
                                  เวลาเปิดทำการ</p>
                                  <p class="fs-4" style="font-family: sarabun;">
