--- a/contact.html
+++ b/contact.html
@@ -74,6 +74,18 @@
             .nav-pills {
                 margin-top: 10px;
             }
+           #customername {
+               font-size: 2rem;
+           }
+           #detail1 {
+               font-size: 1rem;
+           }
+            #detail2 {
+               font-size: 1rem;
+           }
+            #detail3 {
+               font-size: 1rem;
+           }
         }
     </style>
 </head>
@@ -109,13 +121,13 @@
                            ช่องทางการติดต่อ</h>
 
                         <div class="container-md mt-5">
-                            <p class="fs-3 fw-bold" style="font-family: sarabun;">
+                            <p id="customername" class="fs-3 fw-bold" style="font-family: sarabun;">
                                 อาร์แอนด์บี เมดิคอล คลินิคเทคนิคการแพทย์</p>
-                            <p class="fs-4" style="font-family: sarabun;">
+                            <p id="detail1" "class="fs-4" style="font-family: sarabun;">
                                  เวลาเปิดทำการ</p>
-                                 <p class="fs-4" style="font-family: sarabun;">
+                                 <p id="detail2" class="fs-4" style="font-family: sarabun;">
                                     วันจันทร์  ถึง  วันศุกร์      เวลา 08.00น. - 17.00 น</p>
-                                    <p class="fs-4" style="font-family: sarabun;">
+                                    <p id="detail3" class="fs-4" style="font-family: sarabun;">
                                         วันเสาร์ ถึง วันอาทิตย์      เวลา 09.00 น. - 19.00 น.</p>
                         </div>
                     </div>
