--- a/contact.html
+++ b/contact.html
@@ -92,6 +92,7 @@
          .detail{
               font-size: 0.75rem;
              font-family: "sarabun";
+             line-height: 1;
              
          }
         }
