--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </a>
             <ul class="nav nav-pills">
                 <li class="nav-item"><a href="#" class="nav-link active">หน้าแรก</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">อัตราค่าบริการ</a></li>
+                <li class="nav-item"><a href="package.html" class="nav-link">อัตราค่าบริการ</a></li>
                 <li class="nav-item"><a href="home.html" class="nav-link">ผลตรวจสุขภาพประจำปี</a></li>
                 <li class="nav-item"><a href="contact.html" class="nav-link">ติดต่อเรา</a></li>
             </ul>
