--- a/contact.html
+++ b/contact.html
@@ -112,7 +112,7 @@
 
             <ul class="nav nav-pills">
                 <li class="nav-item"><a href="index.html" class="nav-link" aria-current="page">หน้าแรก</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">อัตราค่าบริการ</a></li>
+                <li class="nav-item"><a href="package.html" class="nav-link">อัตราค่าบริการ</a></li>
                 <li class="nav-item"><a href="home.html" class="nav-link">ผลตรวจสุขภาพประจำปี</a></li>
                 <li class="nav-item"><a href="#" class="nav-link active fw-bold">ติดต่อเรา</a></li>
 
