--- a/package.html
+++ b/package.html
@@ -185,7 +185,10 @@
         min-width: 660px;
    
     }
-    
+    .bd-placeholder-img{
+        min-height: 300px;
+        max-height: 300px;
+    }  
        
 
     h {
