--- a/package.html
+++ b/package.html
@@ -220,6 +220,11 @@
         min-width: 660px;
    
     }
+           .modalrecieve{
+        max-width: 900px;
+        min-width: 900px;
+    }
+
 
     .card-text{
         font-family: "sarabun";
