--- a/package.html
+++ b/package.html
@@ -212,6 +212,7 @@
     .container {
         max-width: 910px;
         min-width: 660px;
+        width: 90%;
     }
     .container-fluid {
         background-color: lightblue;
