--- a/package.html
+++ b/package.html
@@ -222,8 +222,8 @@
    
     }
            .modalrecieve{
-        max-width: 900px;
-        min-width: 900px;
+        max-width: 80%;
+        min-width: 80%;
     }
 
 
