--- a/package.html
+++ b/package.html
@@ -374,7 +374,7 @@
 
         <!-- เมนู -->
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
+            <ul class="nav-pills ms-auto">
                 <li class="nav-item"><a href="index.html" class="nav-link">หน้าแรก</a></li>
                 <li class="nav-item"><a href="#" class="nav-link active fw-bold" aria-current="page">อัตราค่าบริการ</a></li>
                 <li class="nav-item"><a href="home.html" class="nav-link">ผลตรวจสุขภาพประจำปี</a></li>
