--- a/package.html
+++ b/package.html
@@ -358,13 +358,15 @@
 
 <body>
     <div class="container">
-       <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
+      
     <div class="container-fluid">
-        <!-- โลโก้และชื่อ -->
-        <a class="navbar-brand d-flex align-items-center" href="/">
-            <img class="nav-logo" src="https://img5.pic.in.th/file/secure-sv1/8c27b7b1c06a8f089.png" height="40">
-            <span class="fs-4 ms-2" style="color:rgb(13, 48, 3)">R&B Medical Laboratory</span>
-        </a>
+      <nav class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+            <a href="/"
+                class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+                <img class="nav-logo" src="https://img5.pic.in.th/file/secure-sv1/8c27b7b1c06a8f089.png">
+                <span class="fs-4" style="color:rgb(13, 48, 3)">R&B Medical Laboratory</span>
+            </a>
+
 
         <!-- ปุ่ม toggle -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -373,15 +375,13 @@
         </button>
 
         <!-- เมนู -->
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="nav-pills ms-auto">
-                <li class="nav-item"><a href="index.html" class="nav-link">หน้าแรก</a></li>
-                <li class="nav-item"><a href="#" class="nav-link active fw-bold" aria-current="page">อัตราค่าบริการ</a></li>
+       <ul class="nav nav-pills" id="barnavBar">
+                <li class="nav-item"><a href="#" class="nav-link active fw-bold" aria-current="page">หน้าแรก</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">อัตราค่าบริการ</a></li>
                 <li class="nav-item"><a href="home.html" class="nav-link">ผลตรวจสุขภาพประจำปี</a></li>
-                <li class="nav-item"><a href="contact.html" class="nav-link">ติดต่อเรา</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">ติดต่อเรา</a></li>
+
             </ul>
-        </div>
-    </div>
 </nav>
         <div class="b-example-divider"></div>
         
