--- a/package.html
+++ b/package.html
@@ -358,31 +358,21 @@
 
 <body>
     <div class="container">
-      
-    <div class="container-fluid">
-      <nav class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+        <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
             <a href="/"
                 class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
                 <img class="nav-logo" src="https://img5.pic.in.th/file/secure-sv1/8c27b7b1c06a8f089.png">
                 <span class="fs-4" style="color:rgb(13, 48, 3)">R&B Medical Laboratory</span>
             </a>
 
-
-        <!-- ปุ่ม toggle -->
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <!-- เมนู -->
-       <ul class="nav nav-pills" id="barnavBar">
+            <ul class="nav nav-pills">
                 <li class="nav-item"><a href="#" class="nav-link active fw-bold" aria-current="page">หน้าแรก</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">อัตราค่าบริการ</a></li>
                 <li class="nav-item"><a href="home.html" class="nav-link">ผลตรวจสุขภาพประจำปี</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">ติดต่อเรา</a></li>
 
             </ul>
-</nav>
+        </header>
         <div class="b-example-divider"></div>
         
 
