--- a/package.html
+++ b/package.html
@@ -226,7 +226,10 @@
         min-width: 80%;
     }
 
-
+     .card-body {
+         max-width: 80%;
+        min-width: 80%;
+     }
     .card-text{
         font-family: "sarabun";
         font-size: 1.5rem;
