--- a/contact.html
+++ b/contact.html
@@ -153,19 +153,25 @@
                     <iframe src="https://www.google.com/maps/embed?..." width="100%" height="250" style="border:0;" allowfullscreen></iframe>
                 </div>
             </div>
-            <div class="col-md-6 mb-4">
-                <div class="border rounded p-4 bg-light">
-                    <h3 class="text-success">Facebook Page</h3>
-                    <p>อาร์ แอนด์ บี เมดิคอล คลินิคเทคนิคการแพทย์</p>
-                    <a href="https://www.facebook.com/Bangkokcentrallab" target="_blank">คลิกเพื่อเข้าสู่ Facebook</a>
-                    <div class="text-center mt-3">
-                        <img src="https://img2.pic.in.th/pic/Facebook_logo_squareb63416e95246a0a1.png" width="100" height="100">
+            <div class="col-md-6">
+                    <div class="ms-2 row g-0 border rounded overflow-hidden flex-md-row mb-4 mt-4 shadow-sm h-md-250 position-relative">
+                      <div class="col p-4 d-flex flex-column position-static" style="background-color:azure;">
+                        <strong class="d-inline-block mb-2  text-success-emphasis fs-3"  style="font-family: sarabun;">Facebook Page</strong>
+                        <h3 class="mb-0 fs-6 fw-bold" style="font-family: sarabun;">อาร์ แอนด์ บี เมดิคอล คลินิคเทคนิคการแพทย์</h3>
+                        <div class="mb-1 text-body-secondary"></div><br>
+                       <a href="https://www.facebook.com/Bangkokcentrallab">คลิกเพื่อเข้าสู่ Facebook Page</a>
+                     
+                      </div>
+                      <div class="col-auto d-none d-lg-block">
+                     <img src="https://img2.pic.in.th/pic/Facebook_logo_squareb63416e95246a0a1.png" width="300" height="300">
+                 <img scr="https://img2.pic.in.th/pic/line-ao.png" style="cursor: pointer" href= "https://line.me/R/ti/p/@296qhnug">
                     </div>
-                </div>
-            </div>
+                    </div>
+                  </div>
+           </div>
         </div>
+       
     </div>
-
     <footer class="container mt-5 py-3 border-top">
         <div class="d-flex justify-content-between">
             <div>
