--- a/package.html
+++ b/package.html
@@ -241,7 +241,10 @@
         max-width: 400px;
         min-width: 400px;
     }  
-
+    .col {
+         max-width: 400px;
+        min-width: 400px;
+    }
     h {
         font-size: 1rem;
     }
