--- a/package.html
+++ b/package.html
@@ -99,6 +99,11 @@
         font-size: 2rem;
         margin-top: 20px;
     }
+    .album{
+        background-image: "https://img2.pic.in.th/pic/251778975ff14a904c2763f36d5bb42b.png";
+        )
+
+        
 
     .b-example-divider {
         width: 100%;
