--- a/package.html
+++ b/package.html
@@ -379,10 +379,10 @@
             </a>
 
             <ul class="nav nav-pills">
-                <li class="nav-item"><a href="#" class="nav-link active fw-bold" aria-current="page">หน้าแรก</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">อัตราค่าบริการ</a></li>
+                <li class="nav-item"><a href="index.html" class="nav-link" >หน้าแรก</a></li>
+                <li class="nav-item"><a href="#" class="nav-link active fw-bold" aria-current="page">อัตราค่าบริการ</a></li>
                 <li class="nav-item"><a href="home.html" class="nav-link">ผลตรวจสุขภาพประจำปี</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">ติดต่อเรา</a></li>
+                <li class="nav-item"><a href="contact.html" class="nav-link">ติดต่อเรา</a></li>
 
             </ul>
         </header>
