--- a/package.html
+++ b/package.html
@@ -247,9 +247,13 @@
         min-width: 400px;
     }  
     .col {
-         max-width: 400px;
-        min-width: 400px;
+         max-width: 500px;
+        min-width: 500px;
     }
+        .card-body {
+        max-width: 500px;
+        min-width: 500px;
+        }
     h {
         font-size: 1rem;
     }
