--- a/contact.html
+++ b/contact.html
@@ -164,8 +164,8 @@
                       </div>
                       <div class="col-auto d-none d-lg-block">
                      <img src="https://img2.pic.in.th/pic/Facebook_logo_squareb63416e95246a0a1.png" width="300" height="300">
-                  <a href="https://line.me/R/ti/p/@296qhnug<img src="https://scdn.line-apps.com/n/line_add_friends/btn/th.png" alt="เพิ่มเพื่อน" height="36" border="0"></a>
-                    </div>
+                 <a class="mt-3" href="https://lin.ee/6KvgXbZ"><img src="https://scdn.line-apps.com/n/line_add_friends/btn/th.png" alt="เพิ่มเพื่อน" height="36" border="0"></a>
+                   </div>
                     </div>
                   </div>
            </div>
