--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         }
         .nav-pills .nav-link {
             background-color: white;
-            color: #2e7d32; /* สีเขียวเข้ม */
+            color: darkgreen;
             border-radius: 5px;
             margin: 0 5px;
         }
