--- a/home.html
+++ b/home.html
@@ -98,8 +98,8 @@
             <div class="collapse navbar-collapse d-md-flex justify-content-end" id="navbarNav">
                 <ul class="nav nav-pills">
                     <li class="nav-item"><a href="index.html" class="nav-link">หน้าแรก</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link active">อัตราค่าบริการ</a></li>
-                    <li class="nav-item"><a href="home.html" class="nav-link">ผลตรวจสุขภาพประจำปี</a></li>
+                    <li class="nav-item"><a href="package.html" class="nav-link active">อัตราค่าบริการ</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">ผลตรวจสุขภาพประจำปี</a></li>
                     <li class="nav-item"><a href="contact.html" class="nav-link">ติดต่อเรา</a></li>
                 </ul>
             </div>
