--- a/index.html
+++ b/index.html
@@ -161,13 +161,14 @@
                 <img src="https://img5.pic.in.th/file/secure-sv1/8c27b7b1c06a8f089.png" alt="Logo" width="40">
                 <span class="fs-6 text-dark ms-2">R&B Medical Laboratory</span>
             </a>
-            <button class="navbar-toggler d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse d-md-flex justify-content-end" id="navbarNav">
                 <ul class="nav nav-pills">
-                    <li class="nav-item"><a href="index.html" class="nav-link ">หน้าแรก</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link active">อัตราค่าบริการ</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link active">หน้าแรก</a></li>
+                    <li class="nav-item"><a href="package.html" class="nav-link">อัตราค่าบริการ</a></li>
                     <li class="nav-item"><a href="home.html" class="nav-link">ผลตรวจสุขภาพประจำปี</a></li>
                     <li class="nav-item"><a href="contact.html" class="nav-link">ติดต่อเรา</a></li>
                 </ul>
@@ -221,5 +222,6 @@
         setInterval(updateDateTime, 1000);
         updateDateTime();
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
