--- a/package.html
+++ b/package.html
@@ -150,6 +150,9 @@
           .card-text{
             font-size: 0.80rem
           }
+        .modalrecieve{
+            width: 80%;
+        }
         }
     </style>
 </head>
