--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
     <style>
         body {
             font-family: 'Sarabun', sans-serif;
+             background-image: url('https://img2.pic.in.th/pic/--2c1095bccc0d81850.png'); /* เปลี่ยนเป็น URL รูปที่ต้องการ */
+    background-size: cover; /* ทำให้ภาพยืด-หดตามหน้าจอ */
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
         }
         .nav-container {
             display: flex;
@@ -184,7 +189,7 @@
                     <img class="img-thumbnail" src="https://img5.pic.in.th/file/secure-sv1/-135e1cf1cc667f011.png">
                 </div>
                 <div class="col-md-7">
-                    <h2 class="fw-bold text-success">บริการตรวจวิเคราะห์และรายงานผลทางการแพทย์</h2>
+                    <h2 class="fw-bold" style="text-color: darkgreen;">บริการตรวจวิเคราะห์และรายงานผลทางการแพทย์</h2>
                     <p class="text-container">ให้บริการตรวจสุขภาพและการวิเคราะห์ทางการแพทย์โดยนักเทคนิคการแพทย์ผู้เชี่ยวชาญ รวมทั้งเทคโนโลยีที่ทันสมัยตามมาตรฐานสากล รายงานผลได้อย่างแม่นยำและน่าเชื่อถือ สำหรับผู้ที่ต้องการตรวจสุขภาพทั่วไป ตรวจเลือด ตรวจปัสสาวะทั่วไป ตรวจหาสารเสพติดในปัสสาวะ ตรวจการตั้งครรภ์ ตรวจสุขภาพเพื่อการออกใบรับรองแพทย์ หรือเพื่อสมัครงาน ทราบผลไว ภายใน 60 นาที</p>
                     <p class="text-primary fw-bold">ยินดีให้คำปรึกษาด้วยแพทย์ผู้เชี่ยวชาญโดยไม่เสียค่าใช้จ่าย</p>
                 </div>
@@ -194,7 +199,7 @@
         <div class="container-fluid mt-5">
             <div class="row">
                 <div class="col-md-7">
-                    <h2 class="fw-bold text-success">บริการออกหน่วยตรวจสุขภาพเคลื่อนที่</h2>
+                    <h2 class="fw-bold" style="text-color: darkgreen;">บริการออกหน่วยตรวจสุขภาพเคลื่อนที่</h2>
                     <p class="text-container">ให้บริการตรวจสุขภาพนอกสถานที่ สำหรับ บริษัท หน่วยงาน องค์กร และสถานศึกษา ในการจัดการตรวจสุขภาพประจำปีเพื่อเป็นสวัสดิการแด่พนักงาน หรือ ตามที่กฎหมายคุ้มครองแรงงานกำหนด มีความพร้อมด้วยทีมเจ้าหน้าที่ผู้เชี่ยวชาญ และเครื่องมือที่ทันสมัยและปลอดเชื้อ พร้อมด้วย รถ X Ray Mobile ให้บริการฉายภาพรังสีเคลื่อนที่ ด้วยระบบดิจิตอล</p>
                     <a href="#" class="link">คลิกดูรายละเอียดแพคเกจ</a>
                 </div>
