--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,11 @@
     <style>
         body {
             font-family: 'Sarabun', sans-serif;
+             background-image: url('https://img2.pic.in.th/pic/--2c1095bccc0d81850.png'); /* เปลี่ยนเป็น URL รูปที่ต้องการ */
+    background-size: cover; /* ทำให้ภาพยืด-หดตามหน้าจอ */
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
         }
         .nav-container {
             display: flex;
