--- a/contact.html
+++ b/contact.html
@@ -48,6 +48,11 @@
         .nav-logo img {
             width: 50px;
         }
+        .text-footer{
+            font-family: "sarabun";
+            font-color: darkgreen;
+            font-size: 0.80rem;
+        }
         .hero-image {
             width: 100%;
             height: auto;
@@ -85,6 +90,10 @@
             .nav-pills {
                 margin-top: 10px;
             }
+             .text-footer{
+            font-family: "sarabun";
+            font-color: darkgreen;
+            font-size: 0.50rem;
         }
 
     </style>
@@ -168,9 +177,9 @@
         <div class="d-flex justify-content-between">
             <div>
                 <img class="footer-logo" src="https://img5.pic.in.th/file/secure-sv1/8c27b7b1c06a8f089.png">
-                <span class="text-success">อาร์แอนด์บี เมดิคอล คลินิคเทคนิคการแพทย์</span>
+                <span class="text-footer">อาร์แอนด์บี เมดิคอล คลินิคเทคนิคการแพทย์</span>
             </div>
-            <div id="datetime" class="fs-6 text-success"></div>
+            <div id="datetime" class="fs-6 text-footer"></div>
         </div>
     </footer>
 
