--- a/package.html
+++ b/package.html
@@ -24,6 +24,10 @@
              background-repeat: no-repeat;
              height: 100vh;
         }
+         .text-footer{
+            font-family: "sarabun";
+            font-color: darkgreen;
+            font-size: 0.80rem;
         .nav-container {
             display: flex;
             justify-content: space-between;
@@ -158,6 +162,11 @@
         .modalrecieve{
             width: 80%;
         }
+      .text-footer{
+            font-family: "sarabun";
+            font-color: darkgreen;
+            font-size: 0.50rem;
+            
         }
     </style>
 </head>
@@ -280,9 +289,9 @@
             <div class="d-flex gap-2 py-5 border border-bottom" style="justify-content: space-between;">
                <div class="container">
                 <img class="footer-logo ms-3" src="https://img5.pic.in.th/file/secure-sv1/8c27b7b1c06a8f089.png">
-                <h class="fs-6" style="color:darkgreen;">อาร์แอนด์บี เมดิคอล คลินิคเทคนิคการแพทย์</h>
+                <h class="text-footer" style="color:darkgreen;">อาร์แอนด์บี เมดิคอล คลินิคเทคนิคการแพทย์</h>
             </div>
-            <div id="datetime" class="fs-6 text-right" style="color:darkgreen;"></div>
+            <div id="datetime" class="text-footer" style="color:darkgreen;"></div>
             
             </div>
 
