--- a/contact.html
+++ b/contact.html
@@ -165,7 +165,7 @@
                       </div>
                       <div class="col-auto d-none d-lg-block">
                      <img src="https://img2.pic.in.th/pic/Facebook_logo_squareb63416e95246a0a1.png" width="300" height="300">
-                 <a class="mt-3" href="https://lin.ee/6KvgXbZ"><img src="https://scdn.line-apps.com/n/line_add_friends/btn/th.png" alt="เพิ่มเพื่อน" height="36" border="0"></a>
+                 
                    </div>
                     </div>
                   </div>
@@ -176,7 +176,7 @@
     <footer class="container mt-5 py-3 border-top">
         <div class="d-flex justify-content-between">
             <div>
-                <img class="footer-logo" src="https://img5.pic.in.th/file/secure-sv1/8c27b7b1c06a8f089.png">
+               <a class="mt-3" href="https://lin.ee/6KvgXbZ"><img src="https://scdn.line-apps.com/n/line_add_friends/btn/th.png" alt="ติดต่อสอบถาม คลิก" height="36" border="0"></a>
                
             </div>
             <div id="datetime" class="fs-6 text-footer"></div>
