--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         
         <footer class="d-flex justify-content-between py-3 border-top">
             <div>
-                <img class="footer-logo" src="https://img5.pic.in.th/file/secure-sv1/8c27b7b1c06a8f089.png">
+              <a class="mt-3" href="https://lin.ee/6KvgXbZ"><img src="https://scdn.line-apps.com/n/line_add_friends/btn/th.png" alt="ติดต่อสอบถาม คลิก" height="36" border="0"></a>
         
             </div>
             <div id="datetime" class="text-success"></div>
