--- a/package.html
+++ b/package.html
@@ -282,7 +282,7 @@ font-size: 0.50rem;
         <div class="border border-bottom" style="justify-content: space-between;">
             <div class="d-flex gap-2 py-5 border border-bottom" style="justify-content: space-between;">
                <div class="container">
-                <img class="footer-logo ms-3" src="https://img5.pic.in.th/file/secure-sv1/8c27b7b1c06a8f089.png">
+                 <a class="mt-3" href="https://lin.ee/6KvgXbZ"><img src="https://scdn.line-apps.com/n/line_add_friends/btn/th.png" alt="ติดต่อสอบถาม คลิก" height="36" border="0"></a>
               
             </div>
             <div id="datetime" class="text-footer" style="color:darkgreen;"></div>
