--- a/package.html
+++ b/package.html
@@ -181,6 +181,7 @@ font-size: 0.50rem;
                     <li class="nav-item"><a href="#" class="nav-link active">อัตราค่าบริการ</a></li>
                     <li class="nav-item"><a href="home.html" class="nav-link">ผลตรวจสุขภาพประจำปี</a></li>
                     <li class="nav-item"><a href="contact.html" class="nav-link">ติดต่อเรา</a></li>
+                  <li class="nav-item"><a href="login.html" class="nav-link" style="color: darkgray;">เจ้าหน้าที่</a></li>
                 </ul>
             </div>
         </header>
