--- a/contact.html
+++ b/contact.html
@@ -115,6 +115,7 @@
                     <li class="nav-item"><a href="package.html" class="nav-link">อัตราค่าบริการ</a></li>
                     <li class="nav-item"><a href="home.html" class="nav-link">ผลตรวจสุขภาพประจำปี</a></li>
                     <li class="nav-item"><a href="#" class="nav-link active">ติดต่อเรา</a></li>
+                     <li class="nav-item"><a href="login.html" class="nav-link" style="color: darkgray;">เจ้าหน้าที่</a></li>
                 </ul>
             </div>
         </header>
