--- a/login.html
+++ b/login.html
@@ -153,7 +153,7 @@
                     <label for="username" class="form-label">ชื่อผู้ใช้</label>
                     <input type="text" class="form-control" id="username" required>
                 </div>
-                <div class="mb-3">
+                <div class="mb-3 text-center">
                     <label for="password" class="form-label">รหัสผ่าน</label>
                     <input type="password" class="form-control" id="password" required>
                 </div>
