--- a/package.html
+++ b/package.html
@@ -30,6 +30,9 @@
             background-color: transparent;
             margin-left: auto;
         }
+        .col{
+            max-width: 250px;
+            min-width: 250px;
         .navbar-toggler-icon {
             background-image: url('data:image/svg+xml;charset=UTF8,%3Csvg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30" fill="black"%3E%3Cpath stroke="rgba%280, 0, 0, 0.7%29" stroke-width="3" stroke-linecap="round" stroke-miterlimit="10" d="M4 7h22M4 15h22M4 23h22"/%3E%3C/svg%3E');
         }
