--- a/package.html
+++ b/package.html
@@ -179,8 +179,9 @@
             }
 
             .col {
-                max-width: 250px;
-                min-width: 250px;
+                max-width: 350px;
+                min-width: 350px;
+                margin-left: 40px;
             }
             .container-sm{
                 display: block;
