--- a/package.html
+++ b/package.html
@@ -146,8 +146,8 @@
             }
 
             .container {
-                max-width: 90%;
-                min-width: 90%;
+                max-width: 700px;
+                min-width: 700px;
             }
 
             .container-fluid {
