--- a/package.html
+++ b/package.html
@@ -149,7 +149,10 @@
                 max-width: 700px;
                 min-width: 700px;
             }
-
+            body{
+                max-width: 700px;
+                min-width: 700px;
+            }
             .container-fluid {
                 max-width: 90%;
                 min-width: 90%;
