--- a/package.html
+++ b/package.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Mobile Checkup System</title>
     <script src="https://apis.google.com/js/api.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -129,8 +129,8 @@
             height: 30px;
         }
         .col{
-            max-width: 280px;
-            min-width: 280px;
+            max-width: 250px;
+            min-width: 250px;
         }
         @media (max-width: 768px) {
             .nav-container {
@@ -179,9 +179,9 @@
             }
 
             .col {
-                max-width: 350px;
-                min-width: 350px;
-                margin-left: 40px;
+                max-width: 280px;
+                min-width: 280px;
+                margin-left: 20px;
             }
             .container-sm{
                 display: block;
