--- a/package.html
+++ b/package.html
@@ -146,8 +146,8 @@
             }
 
             .container {
-                max-width: 700px;
-                min-width: 700px;
+                max-width: 6.6inch;
+                min-width: 6.6inch;
             }
           
             .container-fluid {
