--- a/package.html
+++ b/package.html
@@ -137,6 +137,10 @@
                 flex-direction: column;
                 align-items: center;
             }
+            body{
+                max-width: 7cm;
+                min-width: 6cm;
+            }
 
             .nav-pills {
                 margin-top: 10px;
