--- a/package.html
+++ b/package.html
@@ -34,6 +34,12 @@
 <style>
       .nav-logo {
             width: 50px;
+
+     .page-headers {
+    background: url(https://img2.pic.in.th/pic/065dca9c28b2bab87fc4238e7756a620.png) top center no-repeat;
+    background-size: cover;
+    text-shadow: 0 0 30px rgba(0, 0, 0, .1);
+}
         }
 
         .navbar-toggler {
