--- a/index.html
+++ b/index.html
@@ -242,7 +242,9 @@
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
                         &copy; <a class="border-bottom" href="#">อาร์ แอนด์ บี</a>, คลินิคเทคนิคการแพทย์.
                     </div>
+                     <div class="col-md-6 text-center text-md-end">
                  <a href="https://lin.ee/6KvgXbZ"><img src="https://scdn.line-apps.com/n/line_add_friends/btn/th.png" alt="เพิ่มเพื่อน" height="36" border="0"></a>
+                     </div>
                 </div>
             </div>
         </div>
