--- a/index.html
+++ b/index.html
@@ -171,6 +171,23 @@
             font-size: 0.80rem
           }
         }
+        .container-short {
+            max-width: 30%;
+            min-width: 30%;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+            border-radius: 10px;
+            background-color: rgb(167, 216, 200);
+
+
+        }
+
+        .container-long {
+            max-width: 50%;
+            min-width: 50%;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+            border-radius: 10px;
+            background-color: rgb(167, 216, 200);
+        }
     </style>
 <body>
     <!-- Spinner Start -->
@@ -209,10 +226,10 @@
         
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-4 text-center">
+                <div class="container-short">
                     <img class="img-thumbnail" src="https://img5.pic.in.th/file/secure-sv1/-135e1cf1cc667f011.png">
                 </div>
-                <div class="col-md-7">
+                <div class="container-long">
                     <h2 class="fw-bold text-success">บริการตรวจวิเคราะห์และรายงานผลทางการแพทย์</h2>
                     <p class="text-container">ให้บริการตรวจสุขภาพและการวิเคราะห์ทางการแพทย์โดยนักเทคนิคการแพทย์ผู้เชี่ยวชาญ รวมทั้งเทคโนโลยีที่ทันสมัยตามมาตรฐานสากล รายงานผลได้อย่างแม่นยำและน่าเชื่อถือ สำหรับผู้ที่ต้องการตรวจสุขภาพทั่วไป ตรวจเลือด ตรวจปัสสาวะทั่วไป ตรวจหาสารเสพติดในปัสสาวะ ตรวจการตั้งครรภ์ ตรวจสุขภาพเพื่อการออกใบรับรองแพทย์ หรือเพื่อสมัครงาน ทราบผลไว ภายใน 60 นาที</p>
                     <p class="text-primary fw-bold">ยินดีให้คำปรึกษาด้วยแพทย์ผู้เชี่ยวชาญโดยไม่เสียค่าใช้จ่าย</p>
