--- a/contact.html
+++ b/contact.html
@@ -120,7 +120,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4">
-                   
+                    <div class="h-100 bg-light rounded d-flex align-items-center p-5">
                         <div class="ms-4">
                             <p class="mb-2">Mail Us Now</p>
                             <h5 class="mb-0">mitrpracha.rbmb@gmail.com</h5>
