--- a/contact.html
+++ b/contact.html
@@ -102,8 +102,8 @@
                         </div>
                         <div class="ms-4">
                             <p class="mb-2">ที่ตั้งออฟฟิศ</p>
-                            <h5 class="mb-0">เลขที่ 67/19 ต. หนองปลาหมอ</h5>
-                            <้้h5 class="mb-0">อ. หนองแค จ.สระบุรี 18140</h5>
+                            <h5 class="mb-0" style="font-family: sarabun; color: darkgreen;">เลขที่ 67/19 ต. หนองปลาหมอ</h5>
+                            <้้h5 class="mb-0" style="font-family: sarabun; color: darkgreen;">อ. หนองแค จ.สระบุรี 18140</h5>
                         </div>
                     </div>
                 </div>
@@ -112,7 +112,7 @@
                         <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-white" style="width: 55px; height: 55px;">
                             <i class="fa fa-phone-alt text-primary"></i>
                         </div>
-                        <div class="ms-4">
+                        <div class="ms-4" style="color: darkgreen;">
                             <p class="mb-2">สนใจตรวจสุขภาพโทรหาเรา</p>
                             <h5 class="mb-0">098-920-2270 K.บิ๊ก</h5>
                             <h5 class="mb-0">092-636-8867 K.รุ้ง</h5>
@@ -123,7 +123,7 @@
                     <div class="h-100 bg-light rounded d-flex align-items-center p-5">
                         <div class="ms-4">
                             <p class="mb-2">Mail Us Now</p>
-                            <h5 class="mb-0">mitrpracha.rbmb@gmail.com</h5>
+                            <h5 class="mb-0" style="color: darkgreen;">mitrpracha.rbmb@gmail.com</h5>
                             <p class="mb-2">Facebook Fanpage</p>
                             <a class="link" href="https://www.facebook.com/Bangkokcentrallab">https://www.facebook.com/Bangkokcentrallab</h5>
                         </div>
