--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,7 @@
                         <div class="ms-4">
                             <p class="mb-2">ที่ตั้งออฟฟิศ</p>
                             <h5 class="fs-6" style="font-family: sarabun; color: darkgreen;">เลขที่ 67/19 ต. หนองปลาหมอ</h5>
-                            <้้h class="fs-6" style="font-family: sarabun; color: darkgreen;">อ. หนองแค จ.สระบุรี 18140</h>
+                        <h class="fs-6" style="font-family: sarabun; color: darkgreen;">อ. หนองแค จ.สระบุรี 18140</h>
                         </div>
                     </div>
                 </div>
@@ -125,7 +125,7 @@
                             <p class="mb-2">Mail Us Now</p>
                             <h5 class="mb-0" style="color: darkgreen;">mitrpracha.rbmb@gmail.com</h5>
                             <p class="mb-2">Facebook Fanpage</p>
-                            <a class="link fs-6" href="https://www.facebook.com/Bangkokcentrallab">https://www.facebook.com/Bangkokcentrallab</h5>
+                            <a class="fs-6" href="https://www.facebook.com/Bangkokcentrallab">https://www.facebook.com/Bangkokcentrallab</h5>
                         </div>
                     </div>
                 </div>
